# STM32F746-Discovery-Kit-Board-Support-Package

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  STM32-toolchain.cmake
Doc/: readme.txt
Example/: CMakeLists.txt
Example/Inc/: stm32f7xx_it.h
Example/Src/: audio_rec.c  camera.c  lcd.c  log.c  sd.c  sdram.c  sdram_dma.c  stm32f7xx_it.c  system_stm32f7xx.c
Example/User/: audio_play.c  eeprom.c  main.c  touchscreen.c
Inc/: main.h  stlogo.h  stm32f7xx_hal_conf.h
SW4STM32/: startup_stm32f746xx.s
Src/: audio_loopback.c  qspi.c
include/: lcd_log_conf.h
